Lots of changes/refactoring. Now has days w/ Events. Dummy data... etc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ReactCalendar</title>
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
 
