--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h1 class="text-center">Calendar</h1>
         <div id="calendar"></div>
     </div>
-    <script src="build/main.js"></script>
+    <script src="dist/main.js"></script>
 </body>
 </html>
